--- a/pretix_stay22/locale/de/LC_MESSAGES/django.po
+++ b/pretix_stay22/locale/de/LC_MESSAGES/django.po
@@ -3,13 +3,16 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-10-21 18:36+0200\n"
-"PO-Revision-Date: \n"
-"Last-Translator: Raphael Michel\n"
-"Language-Team: \n"
+"PO-Revision-Date: 2019-10-22 01:00+0000\n"
+"Last-Translator: Raphael Michel <michel@rami.io>\n"
+"Language-Team: German <https://translate.pretix.eu/projects/pretix/"
+"pretix-plugin-stay22/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 3.5.1\n"
 
 #: pretix_stay22/__init__.py:13
 msgid "Stay22 Hotel map"
@@ -26,7 +29,7 @@ msgstr ""
 
 #: pretix_stay22/templates/pretix_stay22/order_info.html:6
 msgid "Book a hotel"
-msgstr ""
+msgstr "Hotel buchen"
 
 #: pretix_stay22/templates/pretix_stay22/settings.html:5
 msgid "Stay22 settings"
