--- a/pretix_stay22/locale/si/LC_MESSAGES/django.po
+++ b/pretix_stay22/locale/si/LC_MESSAGES/django.po
@@ -8,13 +8,16 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-10-21 18:36+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"PO-Revision-Date: 2021-03-03 07:00+0000\n"
+"Last-Translator: helabasa <R45XvezA@pm.me>\n"
+"Language-Team: Sinhala <https://translate.pretix.eu/projects/pretix/"
+"pretix-plugin-stay22/si/>\n"
 "Language: si\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n > 1;\n"
+"X-Generator: Weblate 4.4.2\n"
 
 #: pretix_stay22/__init__.py:13
 msgid "Stay22 Hotel map"
@@ -27,7 +30,7 @@ msgstr ""
 
 #: pretix_stay22/signals.py:92
 msgid "Stay22"
-msgstr ""
+msgstr "ස්ටේ22"
 
 #: pretix_stay22/templates/pretix_stay22/order_info.html:6
 msgid "Book a hotel"
@@ -50,7 +53,7 @@ msgstr ""
 
 #: pretix_stay22/templates/pretix_stay22/settings.html:24
 msgid "Save"
-msgstr ""
+msgstr "සුරකින්න"
 
 #: pretix_stay22/views.py:21
 msgid "Stay22 AID"
