--- a/pretix_stay22/locale/pl/LC_MESSAGES/django.po
+++ b/pretix_stay22/locale/pl/LC_MESSAGES/django.po
@@ -8,54 +8,64 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-10-21 18:36+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"PO-Revision-Date: 2025-03-03 16:00+0000\n"
+"Last-Translator: Wiktor Przybylski <wikprzybylski@gmail.com>\n"
+"Language-Team: Polish <https://translate.pretix.eu/projects/pretix/"
+"pretix-plugin-stay22/pl/>\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2;\n"
+"X-Generator: Weblate 5.10.1\n"
 
 #: pretix_stay22/__init__.py:13
 msgid "Stay22 Hotel map"
-msgstr ""
+msgstr "Plan Hotelu Stay22"
 
 #: pretix_stay22/__init__.py:15
 msgid ""
 "This plugin allows to integrate the Stay22 hotel map into your pretix shop"
 msgstr ""
+"Ten plugin pozwala zintegrować mapę hotelu Stay22 do Twojego sklepu pretix"
 
 #: pretix_stay22/signals.py:92
 msgid "Stay22"
-msgstr ""
+msgstr "Stay22"
 
 #: pretix_stay22/templates/pretix_stay22/order_info.html:6
 msgid "Book a hotel"
-msgstr ""
+msgstr "Zarezerwuj hotel"
 
 #: pretix_stay22/templates/pretix_stay22/settings.html:5
 msgid "Stay22 settings"
-msgstr ""
+msgstr "Ustawienia Stay22"
 
 #: pretix_stay22/templates/pretix_stay22/settings.html:8
 msgid ""
 "Our Stay22 integration works out of the box. You don't need to do anything!"
 msgstr ""
+"Nasza integracja Stay22 działa od razu po zainstalowaniu, nie musisz nic "
+"robić!"
 
 #: pretix_stay22/templates/pretix_stay22/settings.html:12
 msgid ""
 "However, if you are a Stay22 partner yourself and want to customize things "
 "further, you can enter your own affiliate ID or even a full embed link here."
 msgstr ""
+"Jednak jeśli sam jesteś partnerem Stay22 i chcesz dostosować wszystko "
+"bardziej szczegółowo, możesz tutaj wpisać swój własny identyfikator "
+"afiliacyjny lub nawet pełny link osadzenia."
 
 #: pretix_stay22/templates/pretix_stay22/settings.html:24
 msgid "Save"
-msgstr ""
+msgstr "Zapisz"
 
 #: pretix_stay22/views.py:21
 msgid "Stay22 AID"
-msgstr ""
+msgstr "Stay22 AID"
 
 #: pretix_stay22/views.py:26
 msgid "Stay22 Embed Link"
-msgstr ""
+msgstr "Link osadzenia Stay22"
